--- a/Freewalking/Freewalking.csproj
+++ b/Freewalking/Freewalking.csproj
@@ -61,23 +61,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssetLoader.cs" />
-    <Compile Include="Find.cs" />
-    <Compile Include="FreewalkingCamera.cs" />
+    <Compile Include="UI\FreewalkingCamera.cs" />
     <Compile Include="Loaders\HarmonyLoader.cs" />
     <Compile Include="Loaders\TerrainLoader.cs" />
-    <Compile Include="SettingsPanel.cs" />
-    <Compile Include="ModeButton.cs" />
-    <Compile Include="Loader.cs" />
     <Compile Include="MouseLook.cs" />
-    <Compile Include="MyIUserMod.cs" />
+    <Compile Include="FreewalkingMod.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerControl.cs" />
     <Compile Include="PlayerWalk.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TerrainExtend.cs" />
-    <Compile Include="UIComponentHelpers.cs" />
-    <Compile Include="UI\FreeWalkButton.cs" />
     <Compile Include="VehicleControl.cs" />
     <Compile Include="VehicleFollow.cs" />
   </ItemGroup>
