--- a/Freewalking/Freewalking.csproj
+++ b/Freewalking/Freewalking.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Loaders\TerrainLoader.cs" />
     <Compile Include="FreewalkingMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
